Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextBoolean.quorum
text t = cast(text, true)