Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextObjText.quorum
Text t = cast(Text, "text")